--- a/chris/chris_exploration.ipynb
+++ b/chris/chris_exploration.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 121,
    "id": "1407f0c3",
    "metadata": {
     "scrolled": true
@@ -3450,7 +3450,7 @@
        "[5251 rows x 198 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3463,17 +3463,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 122,
    "id": "22a54b10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: int64)"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = prepare.clean(df)"
+    "df.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 123,
    "id": "61ed9c7a",
    "metadata": {
     "scrolled": false
@@ -3482,21 +3493,21 @@
     {
      "data": {
       "text/plain": [
-       "Unnamed: 0                     0\n",
-       "airdragon_team100              0\n",
-       "assistsplayer_1                0\n",
-       "assistsplayer_10               0\n",
-       "assistsplayer_2                0\n",
-       "                              ..\n",
-       "RedTeamXp                      0\n",
-       "BlueTeamTotalGoldDifference    0\n",
-       "RedTeamTotalGoldDifference     0\n",
-       "BlueTeamMVPKills               0\n",
-       "RedTeamMVPKills                0\n",
-       "Length: 231, dtype: int64"
+       "Unnamed: 0                0\n",
+       "airdragon_team100         0\n",
+       "assistsplayer_1           0\n",
+       "assistsplayer_10          0\n",
+       "assistsplayer_2           0\n",
+       "                       ... \n",
+       "xp_7                      0\n",
+       "xp_8                      0\n",
+       "xp_9                      0\n",
+       "waterdragon_team200    3856\n",
+       "airdragon_team200      3793\n",
+       "Length: 198, dtype: int64"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3559,14 +3570,6 @@
    "source": [
     "train.shape,test.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5bf5a39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
