--- a/master10_csv/merge.ipynb
+++ b/master10_csv/merge.ipynb
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "bf8a7af7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df = pd.read_csv('final_10.csv')\n",
-    "df = pd.read_csv('min_10_start_3700_end_4173_.csv')\n",
-    "df2 = pd.read_csv('pro_players_10min')\n",
-    "df3 = pd.read_csv('min_10_start_1500_end_1515_.csv')\n",
-    "df4 = pd.read_csv('new_extracted_data_chavez_time_10.csv')\n",
-    "df5 = pd.read_csv('new_extracted_data_Jared_time_10.csv')\n",
-    "df6 = pd.read_csv('new_extracted_data_smith_time_10.csv')\n",
-    "df7 = pd.read_csv('new_extracted_data_bryant_time_10.csv')"
+    "# CSV files\n",
+    "df = pd.read_csv('new_extracted_data_chavez_time_10.csv')\n",
+    "#df1 = pd.read_csv('')\n",
+    "#df2 = pd.read_csv('')\n",
+    "#df3 = pd.read_csv('')\n",
+    "#df4 = pd.read_csv('')\n",
+    "#df5 = pd.read_csv('')\n",
+    "#df6 = pd.read_csv('')"
    ]
   },
   {
@@ -34,510 +34,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([df, df2], axis=0, ignore_index=True)\n",
-    "\n",
-    "df = pd.concat([df, df3], axis=0, ignore_index=True)\n",
-    "\n",
-    "df = pd.concat([df, df4], axis=0, ignore_index=True)\n",
-    "\n",
-    "#df = df.drop(columns=['Unnamed: 0'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6d48b2d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([df, df5], axis=0, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7c144b43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([df, df6], axis=0, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a54d481c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([df, df7], axis=0, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2ab11c56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(columns=['Unnamed: 0'])"
+    "#df = pd.concat([df, df1], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "06ba6303",
+   "id": "4e3b0dcd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.fillna(0)"
+    "df.to_csv(\"final_10.csv\") # Nov 22 7:27pm (Chavez)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "467d78f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop_duplicates(inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "9a06ef53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.reset_index(inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "5df92fa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.drop(columns = ['index'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "55c4dc6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>airdragon_team100</th>\n",
-       "      <th>airdragon_team200</th>\n",
-       "      <th>assistsplayer_1</th>\n",
-       "      <th>assistsplayer_10</th>\n",
-       "      <th>assistsplayer_2</th>\n",
-       "      <th>assistsplayer_3</th>\n",
-       "      <th>assistsplayer_4</th>\n",
-       "      <th>assistsplayer_5</th>\n",
-       "      <th>assistsplayer_6</th>\n",
-       "      <th>assistsplayer_7</th>\n",
-       "      <th>...</th>\n",
-       "      <th>xp_3</th>\n",
-       "      <th>xp_4</th>\n",
-       "      <th>xp_5</th>\n",
-       "      <th>xp_6</th>\n",
-       "      <th>xp_7</th>\n",
-       "      <th>xp_8</th>\n",
-       "      <th>xp_9</th>\n",
-       "      <th>baron_team200</th>\n",
-       "      <th>hextechdragon_team100</th>\n",
-       "      <th>waterdragon_team200</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6278.0</td>\n",
-       "      <td>5651.0</td>\n",
-       "      <td>3669.0</td>\n",
-       "      <td>5024.0</td>\n",
-       "      <td>8457.0</td>\n",
-       "      <td>6991.0</td>\n",
-       "      <td>4355.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6996.0</td>\n",
-       "      <td>4891.0</td>\n",
-       "      <td>6294.0</td>\n",
-       "      <td>5946.0</td>\n",
-       "      <td>7441.0</td>\n",
-       "      <td>7216.0</td>\n",
-       "      <td>6854.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7447.0</td>\n",
-       "      <td>5592.0</td>\n",
-       "      <td>3879.0</td>\n",
-       "      <td>6952.0</td>\n",
-       "      <td>7269.0</td>\n",
-       "      <td>6912.0</td>\n",
-       "      <td>4729.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6886.0</td>\n",
-       "      <td>4756.0</td>\n",
-       "      <td>3928.0</td>\n",
-       "      <td>6378.0</td>\n",
-       "      <td>7346.0</td>\n",
-       "      <td>6593.0</td>\n",
-       "      <td>6739.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6126.0</td>\n",
-       "      <td>5742.0</td>\n",
-       "      <td>4099.0</td>\n",
-       "      <td>6884.0</td>\n",
-       "      <td>6053.0</td>\n",
-       "      <td>5628.0</td>\n",
-       "      <td>5376.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5223</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5101.0</td>\n",
-       "      <td>2512.0</td>\n",
-       "      <td>3600.0</td>\n",
-       "      <td>2952.0</td>\n",
-       "      <td>4653.0</td>\n",
-       "      <td>3180.0</td>\n",
-       "      <td>2027.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5224</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4903.0</td>\n",
-       "      <td>3531.0</td>\n",
-       "      <td>2562.0</td>\n",
-       "      <td>4223.0</td>\n",
-       "      <td>3354.0</td>\n",
-       "      <td>3688.0</td>\n",
-       "      <td>2730.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5225</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4438.0</td>\n",
-       "      <td>3871.0</td>\n",
-       "      <td>3364.0</td>\n",
-       "      <td>4057.0</td>\n",
-       "      <td>4044.0</td>\n",
-       "      <td>4994.0</td>\n",
-       "      <td>3046.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5226</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4931.0</td>\n",
-       "      <td>2615.0</td>\n",
-       "      <td>2538.0</td>\n",
-       "      <td>3494.0</td>\n",
-       "      <td>3480.0</td>\n",
-       "      <td>4133.0</td>\n",
-       "      <td>3341.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5227</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2962.0</td>\n",
-       "      <td>4611.0</td>\n",
-       "      <td>2859.0</td>\n",
-       "      <td>3637.0</td>\n",
-       "      <td>3070.0</td>\n",
-       "      <td>2617.0</td>\n",
-       "      <td>4598.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5228 rows × 197 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      airdragon_team100  airdragon_team200  assistsplayer_1  assistsplayer_10  \\\n",
-       "0                   0.0                1.0              3.0               1.0   \n",
-       "1                   0.0                3.0              2.0               6.0   \n",
-       "2                   0.0                0.0              2.0               2.0   \n",
-       "3                   0.0                0.0              4.0               7.0   \n",
-       "4                   0.0                1.0              3.0               4.0   \n",
-       "...                 ...                ...              ...               ...   \n",
-       "5223                0.0                1.0              0.0               2.0   \n",
-       "5224                0.0                1.0              4.0               0.0   \n",
-       "5225                0.0                1.0              3.0               4.0   \n",
-       "5226                0.0                0.0              1.0               4.0   \n",
-       "5227                0.0                0.0              1.0               0.0   \n",
-       "\n",
-       "      assistsplayer_2  assistsplayer_3  assistsplayer_4  assistsplayer_5  \\\n",
-       "0                 6.0              2.0              7.0              8.0   \n",
-       "1                 1.0              0.0              2.0              0.0   \n",
-       "2                 2.0              4.0              1.0              3.0   \n",
-       "3                 4.0              8.0              1.0              5.0   \n",
-       "4                 4.0              2.0              2.0              4.0   \n",
-       "...               ...              ...              ...              ...   \n",
-       "5223              0.0              0.0              1.0              0.0   \n",
-       "5224              3.0              2.0              2.0              2.0   \n",
-       "5225              1.0              1.0              0.0              7.0   \n",
-       "5226              1.0              1.0              2.0              0.0   \n",
-       "5227              1.0              0.0              0.0              3.0   \n",
-       "\n",
-       "      assistsplayer_6  assistsplayer_7  ...    xp_3    xp_4    xp_5    xp_6  \\\n",
-       "0                 3.0              3.0  ...  6278.0  5651.0  3669.0  5024.0   \n",
-       "1                 4.0              2.0  ...  6996.0  4891.0  6294.0  5946.0   \n",
-       "2                 2.0              1.0  ...  7447.0  5592.0  3879.0  6952.0   \n",
-       "3                 2.0             12.0  ...  6886.0  4756.0  3928.0  6378.0   \n",
-       "4                 0.0              2.0  ...  6126.0  5742.0  4099.0  6884.0   \n",
-       "...               ...              ...  ...     ...     ...     ...     ...   \n",
-       "5223              1.0              2.0  ...  5101.0  2512.0  3600.0  2952.0   \n",
-       "5224              0.0              0.0  ...  4903.0  3531.0  2562.0  4223.0   \n",
-       "5225              0.0              4.0  ...  4438.0  3871.0  3364.0  4057.0   \n",
-       "5226              0.0              1.0  ...  4931.0  2615.0  2538.0  3494.0   \n",
-       "5227              0.0              0.0  ...  2962.0  4611.0  2859.0  3637.0   \n",
-       "\n",
-       "        xp_7    xp_8    xp_9  baron_team200  hextechdragon_team100  \\\n",
-       "0     8457.0  6991.0  4355.0            0.0                    0.0   \n",
-       "1     7441.0  7216.0  6854.0            1.0                    1.0   \n",
-       "2     7269.0  6912.0  4729.0            0.0                    1.0   \n",
-       "3     7346.0  6593.0  6739.0            1.0                    1.0   \n",
-       "4     6053.0  5628.0  5376.0            0.0                    0.0   \n",
-       "...      ...     ...     ...            ...                    ...   \n",
-       "5223  4653.0  3180.0  2027.0            2.0                    0.0   \n",
-       "5224  3354.0  3688.0  2730.0            2.0                    0.0   \n",
-       "5225  4044.0  4994.0  3046.0            1.0                    0.0   \n",
-       "5226  3480.0  4133.0  3341.0            0.0                    1.0   \n",
-       "5227  3070.0  2617.0  4598.0            2.0                    0.0   \n",
-       "\n",
-       "      waterdragon_team200  \n",
-       "0                     0.0  \n",
-       "1                     0.0  \n",
-       "2                     0.0  \n",
-       "3                     0.0  \n",
-       "4                     0.0  \n",
-       "...                   ...  \n",
-       "5223                  0.0  \n",
-       "5224                  0.0  \n",
-       "5225                  0.0  \n",
-       "5226                  1.0  \n",
-       "5227                  0.0  \n",
-       "\n",
-       "[5228 rows x 197 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "c546e26f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('final_10.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a42517f2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
