--- a/bryant/acquiring_new_data.ipynb
+++ b/bryant/acquiring_new_data.ipynb
@@ -5270,7 +5270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "d361cd78",
    "metadata": {
     "scrolled": true
@@ -6234,14 +6234,14 @@
       "Skipping: 178 due to <15 min or not classic\n",
       "Skipping: 179 due to <15 min or not classic\n",
       "Skipping: 180 due to <15 min or not classic\n",
-      "Skipping: 181 due to <15 min or not classic\n"
+      "Skipping: 181 due to <15 min or not classic\n",
+      "Finished with: 182 of 249\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished with: 182 of 249\n",
       "Finished with: 183 of 249\n",
       "Skipping: 184 due to <15 min or not classic\n",
       "Finished with: 185 of 249\n",
@@ -6467,14 +6467,14 @@
       "Skipping: 154 due to <15 min or not classic\n",
       "Skipping: 155 due to <15 min or not classic\n",
       "Finished with: 156 of 249\n",
-      "Finished with: 157 of 249\n"
+      "Finished with: 157 of 249\n",
+      "Finished with: 158 of 249\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished with: 158 of 249\n",
       "Finished with: 159 of 249\n",
       "Skipping: 160 due to <15 min or not classic\n",
       "Skipping: 161 due to <15 min or not classic\n",
@@ -8716,7 +8716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "150e040f",
    "metadata": {
     "scrolled": true
@@ -11767,7 +11767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "902fef87",
+   "id": "69fa2fa8",
    "metadata": {},
    "outputs": [],
    "source": []
