--- a/chris/extract_new_data.ipynb
+++ b/chris/extract_new_data.ipynb
@@ -5048,7 +5048,7 @@
     }
    ],
    "source": [
-    "df_10 = acquire.build_extracted_df(username = 'smith', path = './loljson/', time = 10)"
+    "df_10 = acquire.build_extracted_df(username = 'everts', path = './loljson/', time = 10)"
    ]
   },
   {
