--- a/master10_csv/merge.ipynb
+++ b/master10_csv/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "17e79858",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "bf8a7af7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# CSV files\n",
     "df = pd.read_csv('new_extracted_data_chavez_time_10.csv')\n",
-    "#df1 = pd.read_csv('')\n",
+    "df1 = pd.read_csv('new_extracted_data_smith_time_10.csv')\n",
     "#df2 = pd.read_csv('')\n",
     "#df3 = pd.read_csv('')\n",
     "#df4 = pd.read_csv('')\n",
@@ -29,23 +29,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f15d291b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.concat([df, df1], axis=0, ignore_index=True)"
+    "df = pd.concat([df, df1], axis=0, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "id": "4b5058bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airdragon_team100</th>\n",
+       "      <th>assistsplayer_1</th>\n",
+       "      <th>assistsplayer_10</th>\n",
+       "      <th>assistsplayer_2</th>\n",
+       "      <th>assistsplayer_3</th>\n",
+       "      <th>assistsplayer_4</th>\n",
+       "      <th>assistsplayer_5</th>\n",
+       "      <th>assistsplayer_6</th>\n",
+       "      <th>assistsplayer_7</th>\n",
+       "      <th>assistsplayer_8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>xp_4</th>\n",
+       "      <th>xp_5</th>\n",
+       "      <th>xp_6</th>\n",
+       "      <th>xp_7</th>\n",
+       "      <th>xp_8</th>\n",
+       "      <th>xp_9</th>\n",
+       "      <th>chemtechdragon_team200</th>\n",
+       "      <th>riftherald_team200</th>\n",
+       "      <th>airdragon_team200</th>\n",
+       "      <th>waterdragon_team200</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3033.0</td>\n",
+       "      <td>2297.0</td>\n",
+       "      <td>3978.0</td>\n",
+       "      <td>3193.0</td>\n",
+       "      <td>4131.0</td>\n",
+       "      <td>2971.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2907.0</td>\n",
+       "      <td>2719.0</td>\n",
+       "      <td>2691.0</td>\n",
+       "      <td>3758.0</td>\n",
+       "      <td>4331.0</td>\n",
+       "      <td>3662.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3192.0</td>\n",
+       "      <td>3234.0</td>\n",
+       "      <td>4260.0</td>\n",
+       "      <td>3189.0</td>\n",
+       "      <td>4858.0</td>\n",
+       "      <td>2538.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2921.0</td>\n",
+       "      <td>2417.0</td>\n",
+       "      <td>4801.0</td>\n",
+       "      <td>4457.0</td>\n",
+       "      <td>3837.0</td>\n",
+       "      <td>2916.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3005.0</td>\n",
+       "      <td>2671.0</td>\n",
+       "      <td>4865.0</td>\n",
+       "      <td>3579.0</td>\n",
+       "      <td>4496.0</td>\n",
+       "      <td>2644.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 196 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   airdragon_team100  assistsplayer_1  assistsplayer_10  assistsplayer_2  \\\n",
+       "0                0.0              0.0               0.0              0.0   \n",
+       "1                0.0              1.0               1.0              2.0   \n",
+       "2                0.0              1.0               2.0              1.0   \n",
+       "3                0.0              0.0               2.0              0.0   \n",
+       "4                1.0              0.0               2.0              0.0   \n",
+       "\n",
+       "   assistsplayer_3  assistsplayer_4  assistsplayer_5  assistsplayer_6  \\\n",
+       "0              1.0              0.0              0.0              0.0   \n",
+       "1              2.0              2.0              2.0              0.0   \n",
+       "2              4.0              5.0              7.0              1.0   \n",
+       "3              1.0              0.0              1.0              1.0   \n",
+       "4              1.0              0.0              1.0              0.0   \n",
+       "\n",
+       "   assistsplayer_7  assistsplayer_8  ...    xp_4    xp_5    xp_6    xp_7  \\\n",
+       "0              0.0              0.0  ...  3033.0  2297.0  3978.0  3193.0   \n",
+       "1              1.0              2.0  ...  2907.0  2719.0  2691.0  3758.0   \n",
+       "2              3.0              2.0  ...  3192.0  3234.0  4260.0  3189.0   \n",
+       "3              1.0              1.0  ...  2921.0  2417.0  4801.0  4457.0   \n",
+       "4              3.0              0.0  ...  3005.0  2671.0  4865.0  3579.0   \n",
+       "\n",
+       "     xp_8    xp_9  chemtechdragon_team200  riftherald_team200  \\\n",
+       "0  4131.0  2971.0                     NaN                 NaN   \n",
+       "1  4331.0  3662.0                     NaN                 NaN   \n",
+       "2  4858.0  2538.0                     NaN                 NaN   \n",
+       "3  3837.0  2916.0                     1.0                 NaN   \n",
+       "4  4496.0  2644.0                     NaN                 NaN   \n",
+       "\n",
+       "   airdragon_team200  waterdragon_team200  \n",
+       "0                NaN                  NaN  \n",
+       "1                NaN                  NaN  \n",
+       "2                NaN                  NaN  \n",
+       "3                NaN                  NaN  \n",
+       "4                NaN                  NaN  \n",
+       "\n",
+       "[5 rows x 196 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "4e3b0dcd",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"final_10.csv\") # Nov 22 7:27pm (Chavez)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a62b3312",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
