--- a/final.ipynb
+++ b/final.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "### Project and Goals\n",
     "\n",
-    "        Create a machine learning model that can accuratly predict the win/loss outcome of a professional League of Legends match by the 20 minute mark."
+    "        Create a machine learning model that can accuratly predict the win/loss outcome of a professional League of Legends match by the 10 minute mark."
    ]
   },
   {
@@ -69,7 +69,7 @@
    "source": [
     "### Original Hypothesis\n",
     "\n",
-    "    The biggest driver for predicting win rates will be the data on 'TeamWards'."
+    "    The biggest driver for predicting win rates will be the data on 'Towers lost'."
    ]
   },
   {
@@ -163,7 +163,7 @@
    "source": [
     "### Key Takeaways\n",
     "\n",
-    "    We used event data from the Riot API to calcuate what the value of each oberservation was at the 20 min marker.\n",
+    "    We used event data from the Riot API to calcuate what the value of each oberservation was at the 10 min marker.\n",
     "    \n",
     "    The only 'gameType' used was \"classic\".  Which means all the data is from the most popular game mode and on the same map.\n",
     "\n",
@@ -2611,7 +2611,7 @@
     "    \n",
     "    Puuid numbers are used to get match lists from the players match histories.\n",
     "    \n",
-    "    The match lists of games that were longer than 20 min were used to get json files that were prepared into the nice tidy dataframe."
+    "    The match lists of games that were longer than 10 min were used to get json files that were prepared into the nice tidy dataframe."
    ]
   },
   {
@@ -4390,7 +4390,7 @@
     "        - run our model on non-pro games & see if 'towers_lost' is still the biggest driver for predicting win rates\n",
     "        - dive deeper into what are the drivers for gaining towers\n",
     "        - engineer more features\n",
-    "        - predict a winner at a much earlier time than 20 min into a game\n",
+    "        - predict a winner at a much earlier time than 10 min into a game\n",
     "        "
    ]
   },
@@ -4415,7 +4415,7 @@
    "source": [
     "### Key Takeaways\n",
     "\n",
-    "    We used event data from the Riot API to calcuate what the value of each oberservation was at the 20 min marker.\n",
+    "    We used event data from the Riot API to calcuate what the value of each oberservation was at the 10 min marker.\n",
     "    \n",
     "    The only 'gameType' used was \"classic\".  Which means all the data is from the most popular game mode and on the same map.\n",
     "\n",
