--- a/jared/merge.ipynb
+++ b/jared/merge.ipynb
@@ -18,10 +18,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('new_extracted_data_jared_time_5.csv')\n",
-    "df2 = pd.read_csv('new_extracted_data_jared_time_10.csv')\n",
-    "df3 = pd.read_csv('new_extracted_data_jared_time_15.csv')\n",
-    "df4 = pd.read_csv('new_extracted_data_jared_time_20.csv')"
+    "df = pd.read_csv('new_extracted_data_jared_time_1.csv')\n",
+    "df1 = pd.read_csv('new_extracted_data_jared_time_2.csv')\n",
+    "df2 = pd.read_csv('new_extracted_data_jared_time_3.csv')\n",
+    "df3 = pd.read_csv('new_extracted_data_jared_time_4.csv')\n",
+    "df4 = pd.read_csv('new_extracted_data_jared_time_5.csv')\n",
+    "df5 = pd.read_csv('new_extracted_data_jared_time_6.csv')\n",
+    "df6 = pd.read_csv('new_extracted_data_jared_time_7.csv')\n",
+    "df7 = pd.read_csv('new_extracted_data_jared_time_8.csv')\n",
+    "df8 = pd.read_csv('new_extracted_data_jared_time_9.csv')\n",
+    "df9 = pd.read_csv('new_extracted_data_jared_time_10.csv')\n",
+    "df10 = pd.read_csv('new_extracted_data_jared_time_11.csv')\n",
+    "df11 = pd.read_csv('new_extracted_data_jared_time_12.csv')\n",
+    "df12 = pd.read_csv('new_extracted_data_jared_time_13.csv')\n",
+    "df13 = pd.read_csv('new_extracted_data_jared_time_14.csv')\n",
+    "df14 = pd.read_csv('new_extracted_data_jared_time_15.csv')\n",
+    "df15 = pd.read_csv('new_extracted_data_jared_time_16.csv')\n",
+    "df16 = pd.read_csv('new_extracted_data_jared_time_17.csv')\n",
+    "df17 = pd.read_csv('new_extracted_data_jared_time_18.csv')\n",
+    "df18 = pd.read_csv('new_extracted_data_jared_time_19.csv')\n",
+    "df19 = pd.read_csv('new_extracted_data_jared_time_20.csv')\n",
+    "df20 = pd.read_csv('new_extracted_data_jared_time_21.csv')\n",
+    "df21 = pd.read_csv('new_extracted_data_jared_time_22.csv')\n",
+    "df22 = pd.read_csv('new_extracted_data_jared_time_23.csv')"
    ]
   },
   {
@@ -52,6 +71,186 @@
    "outputs": [],
    "source": [
     "df = pd.concat([df, df4], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75e70cf2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df5], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc88ae11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df6], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04a32fc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df7], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da5821fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df8], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "016e27e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df9], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92a1bacc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df10], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df85545c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df11], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5110463c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df12], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a9f4ec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df13], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4d0fef3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df14], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba1c764b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df15], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df209c18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df16], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf77b7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df17], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa329b0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df18], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e29a82e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df19], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20072e1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df20], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee1bd7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df21], axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad0becbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, df22], axis=0, ignore_index=True)"
    ]
   },
   {
