--- a/jared/scratch_notebook.ipynb
+++ b/jared/scratch_notebook.ipynb
@@ -4278,7 +4278,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4896744c",
+   "id": "7b0cbabf",
    "metadata": {},
    "outputs": [
     {
@@ -8512,7 +8512,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f1475121",
+   "id": "9b474c3f",
    "metadata": {},
    "outputs": [
     {
@@ -12771,7 +12771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ad5801",
+   "id": "866cc7b5",
    "metadata": {},
    "outputs": [
     {
@@ -13084,7 +13084,273 @@
       "Skipping: 297 due to <17 min or not classic\n",
       "Skipping: 298 due to <17 min or not classic\n",
       "Skipping: 299 due to <17 min or not classic\n",
-      "Skipping: 300 due to <17 min or not classic\n"
+      "Skipping: 300 due to <17 min or not classic\n",
+      "Finished with: 301 of 499\n",
+      "Skipping: 302 due to <17 min or not classic\n",
+      "Finished with: 303 of 499\n",
+      "Finished with: 304 of 499\n",
+      "Finished with: 305 of 499\n",
+      "Finished with: 306 of 499\n",
+      "Finished with: 307 of 499\n",
+      "Finished with: 308 of 499\n",
+      "Skipping: 309 due to <17 min or not classic\n",
+      "Skipping: 310 due to <17 min or not classic\n",
+      "Skipping: 311 due to <17 min or not classic\n",
+      "Skipping: 312 due to <17 min or not classic\n",
+      "Skipping: 313 due to <17 min or not classic\n",
+      "Skipping: 314 due to <17 min or not classic\n",
+      "Finished with: 315 of 499\n",
+      "Finished with: 316 of 499\n",
+      "Finished with: 317 of 499\n",
+      "Finished with: 318 of 499\n",
+      "Skipping: 319 due to <17 min or not classic\n",
+      "Skipping: 320 due to <17 min or not classic\n",
+      "Skipping: 321 due to <17 min or not classic\n",
+      "Skipping: 322 due to <17 min or not classic\n",
+      "Skipping: 323 due to <17 min or not classic\n",
+      "Skipping: 324 due to <17 min or not classic\n",
+      "Skipping: 325 due to <17 min or not classic\n",
+      "Skipping: 326 due to <17 min or not classic\n",
+      "Skipping: 327 due to <17 min or not classic\n",
+      "Skipping: 328 due to <17 min or not classic\n",
+      "Skipping: 329 due to <17 min or not classic\n",
+      "Skipping: 330 due to <17 min or not classic\n",
+      "Skipping: 331 due to <17 min or not classic\n",
+      "Skipping: 332 due to <17 min or not classic\n",
+      "Skipping: 333 due to <17 min or not classic\n",
+      "Skipping: 334 due to <17 min or not classic\n",
+      "Skipping: 335 due to <17 min or not classic\n",
+      "Skipping: 336 due to <17 min or not classic\n",
+      "Skipping: 337 due to <17 min or not classic\n",
+      "Finished with: 338 of 499\n",
+      "Finished with: 339 of 499\n",
+      "Skipping: 340 due to <17 min or not classic\n",
+      "Skipping: 341 due to <17 min or not classic\n",
+      "Skipping: 342 due to <17 min or not classic\n",
+      "Skipping: 343 due to <17 min or not classic\n",
+      "Skipping: 344 due to <17 min or not classic\n",
+      "Finished with: 345 of 499\n",
+      "Finished with: 346 of 499\n",
+      "Finished with: 347 of 499\n",
+      "Skipping: 348 due to <17 min or not classic\n",
+      "Finished with: 349 of 499\n",
+      "Finished with: 350 of 499\n",
+      "Finished with: 351 of 499\n",
+      "Skipping: 352 due to <17 min or not classic\n",
+      "Skipping: 353 due to <17 min or not classic\n",
+      "Finished with: 354 of 499\n",
+      "Finished with: 355 of 499\n",
+      "Skipping: 356 due to <17 min or not classic\n",
+      "Finished with: 357 of 499\n",
+      "Skipping: 358 due to <17 min or not classic\n",
+      "Skipping: 359 due to <17 min or not classic\n",
+      "Skipping: 360 due to <17 min or not classic\n",
+      "Skipping: 361 due to <17 min or not classic\n",
+      "Skipping: 362 due to <17 min or not classic\n",
+      "Finished with: 363 of 499\n",
+      "Skipping: 364 due to <17 min or not classic\n",
+      "Finished with: 365 of 499\n",
+      "Finished with: 366 of 499\n",
+      "Finished with: 367 of 499\n",
+      "Finished with: 368 of 499\n",
+      "Skipping: 369 due to <17 min or not classic\n",
+      "Finished with: 370 of 499\n",
+      "Skipping: 371 due to <17 min or not classic\n",
+      "Skipping: 372 due to <17 min or not classic\n",
+      "Skipping: 373 due to <17 min or not classic\n",
+      "Skipping: 374 due to <17 min or not classic\n",
+      "Skipping: 375 due to <17 min or not classic\n",
+      "Finished with: 376 of 499\n",
+      "Skipping: 377 due to <17 min or not classic\n",
+      "Finished with: 378 of 499\n",
+      "Finished with: 379 of 499\n",
+      "Skipping: 380 due to <17 min or not classic\n",
+      "Skipping: 381 due to <17 min or not classic\n",
+      "Skipping: 382 due to <17 min or not classic\n",
+      "Skipping: 383 due to <17 min or not classic\n",
+      "Skipping: 384 due to <17 min or not classic\n",
+      "Skipping: 385 due to <17 min or not classic\n",
+      "Skipping: 386 due to <17 min or not classic\n",
+      "Skipping: 387 due to <17 min or not classic\n",
+      "Finished with: 388 of 499\n",
+      "Skipping: 389 due to <17 min or not classic\n",
+      "Finished with: 390 of 499\n",
+      "Finished with: 391 of 499\n",
+      "Finished with: 392 of 499\n",
+      "Finished with: 393 of 499\n",
+      "Skipping: 394 due to <17 min or not classic\n",
+      "Skipping: 395 due to <17 min or not classic\n",
+      "Skipping: 396 due to <17 min or not classic\n",
+      "Skipping: 397 due to <17 min or not classic\n",
+      "Skipping: 398 due to <17 min or not classic\n",
+      "Finished with: 399 of 499\n",
+      "Skipping: 400 due to <17 min or not classic\n",
+      "Finished with: 401 of 499\n",
+      "Finished with: 402 of 499\n",
+      "Skipping: 403 due to <17 min or not classic\n",
+      "Skipping: 404 due to <17 min or not classic\n",
+      "Finished with: 405 of 499\n",
+      "Finished with: 406 of 499\n",
+      "Finished with: 407 of 499\n",
+      "Finished with: 408 of 499\n",
+      "Finished with: 409 of 499\n",
+      "Finished with: 410 of 499\n",
+      "Finished with: 411 of 499\n",
+      "Finished with: 412 of 499\n",
+      "Finished with: 413 of 499\n",
+      "Skipping: 414 due to <17 min or not classic\n",
+      "Skipping: 415 due to <17 min or not classic\n",
+      "Finished with: 416 of 499\n",
+      "Finished with: 417 of 499\n",
+      "Finished with: 418 of 499\n",
+      "Finished with: 419 of 499\n",
+      "Finished with: 420 of 499\n",
+      "Finished with: 421 of 499\n",
+      "Finished with: 422 of 499\n",
+      "Finished with: 423 of 499\n",
+      "Skipping: 424 due to <17 min or not classic\n",
+      "Finished with: 425 of 499\n",
+      "Finished with: 426 of 499\n",
+      "Skipping: 427 due to <17 min or not classic\n",
+      "Skipping: 428 due to <17 min or not classic\n",
+      "Finished with: 429 of 499\n",
+      "Skipping: 430 due to <17 min or not classic\n",
+      "Skipping: 431 due to <17 min or not classic\n",
+      "Finished with: 432 of 499\n",
+      "Skipping: 433 due to <17 min or not classic\n",
+      "Skipping: 434 due to <17 min or not classic\n",
+      "Skipping: 435 due to <17 min or not classic\n",
+      "Skipping: 436 due to <17 min or not classic\n",
+      "Skipping: 437 due to <17 min or not classic\n",
+      "Finished with: 438 of 499\n",
+      "Skipping: 439 due to <17 min or not classic\n",
+      "Finished with: 440 of 499\n",
+      "Finished with: 441 of 499\n",
+      "Finished with: 442 of 499\n",
+      "Finished with: 443 of 499\n",
+      "Skipping: 444 due to <17 min or not classic\n",
+      "Skipping: 445 due to <17 min or not classic\n",
+      "Finished with: 446 of 499\n",
+      "Skipping: 447 due to <17 min or not classic\n",
+      "Skipping: 448 due to <17 min or not classic\n",
+      "Finished with: 449 of 499\n",
+      "Skipping: 450 due to <17 min or not classic\n",
+      "Finished with: 451 of 499\n",
+      "Skipping: 452 due to <17 min or not classic\n",
+      "Finished with: 453 of 499\n",
+      "Finished with: 454 of 499\n",
+      "Finished with: 455 of 499\n",
+      "Skipping: 456 due to <17 min or not classic\n",
+      "Finished with: 457 of 499\n",
+      "Skipping: 458 due to <17 min or not classic\n",
+      "Finished with: 459 of 499\n",
+      "Skipping: 460 due to <17 min or not classic\n",
+      "Finished with: 461 of 499\n",
+      "Skipping: 462 due to <17 min or not classic\n",
+      "Skipping: 463 due to <17 min or not classic\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished with: 464 of 499\n",
+      "Finished with: 465 of 499\n",
+      "Skipping: 466 due to <17 min or not classic\n",
+      "Skipping: 467 due to <17 min or not classic\n",
+      "Finished with: 468 of 499\n",
+      "Finished with: 469 of 499\n",
+      "Finished with: 470 of 499\n",
+      "Finished with: 471 of 499\n",
+      "Finished with: 472 of 499\n",
+      "Finished with: 473 of 499\n",
+      "Finished with: 474 of 499\n",
+      "Skipping: 475 due to <17 min or not classic\n",
+      "Finished with: 476 of 499\n",
+      "Skipping: 477 due to <17 min or not classic\n",
+      "Finished with: 478 of 499\n",
+      "Finished with: 479 of 499\n",
+      "Skipping: 480 due to <17 min or not classic\n",
+      "Skipping: 481 due to <17 min or not classic\n",
+      "Skipping: 482 due to <17 min or not classic\n",
+      "Skipping: 483 due to <17 min or not classic\n",
+      "Skipping: 484 due to <17 min or not classic\n",
+      "Skipping: 485 due to <17 min or not classic\n",
+      "Skipping: 486 due to <17 min or not classic\n",
+      "Skipping: 487 due to <17 min or not classic\n",
+      "Skipping: 488 due to <17 min or not classic\n",
+      "Skipping: 489 due to <17 min or not classic\n",
+      "Skipping: 490 due to <17 min or not classic\n",
+      "Skipping: 491 due to <17 min or not classic\n",
+      "Skipping: 492 due to <17 min or not classic\n",
+      "Skipping: 493 due to <17 min or not classic\n",
+      "Skipping: 494 due to <17 min or not classic\n",
+      "Skipping: 495 due to <17 min or not classic\n",
+      "Finished with: 496 of 499\n",
+      "Finished with: 497 of 499\n",
+      "Finished with: 498 of 499\n",
+      "Finished with: 499 of 499\n",
+      "Done! now lets get some korean bbq, more chicken plz! haha....follow suit\n",
+      "Done! now lets get some korean bbq, more chicken plz! haha....follow suit\n",
+      "Skipping: 0 due to <17 min or not classic\n",
+      "Skipping: 1 due to <17 min or not classic\n",
+      "Skipping: 2 due to <17 min or not classic\n",
+      "Skipping: 3 due to <17 min or not classic\n",
+      "Skipping: 4 due to <17 min or not classic\n",
+      "Skipping: 5 due to <17 min or not classic\n",
+      "Skipping: 6 due to <17 min or not classic\n",
+      "Finished with: 7 of 499\n",
+      "Skipping: 8 due to <17 min or not classic\n",
+      "Finished with: 9 of 499\n",
+      "Finished with: 10 of 499\n",
+      "Finished with: 11 of 499\n",
+      "Finished with: 12 of 499\n",
+      "Skipping: 13 due to <17 min or not classic\n",
+      "Finished with: 14 of 499\n",
+      "Finished with: 15 of 499\n",
+      "Finished with: 16 of 499\n",
+      "Finished with: 17 of 499\n",
+      "Skipping: 18 due to <17 min or not classic\n",
+      "Skipping: 19 due to <17 min or not classic\n",
+      "Skipping: 20 due to <17 min or not classic\n",
+      "Skipping: 21 due to <17 min or not classic\n",
+      "Skipping: 22 due to <17 min or not classic\n",
+      "Skipping: 23 due to <17 min or not classic\n",
+      "Skipping: 24 due to <17 min or not classic\n",
+      "Skipping: 25 due to <17 min or not classic\n",
+      "Skipping: 26 due to <17 min or not classic\n",
+      "Skipping: 27 due to <17 min or not classic\n",
+      "Skipping: 28 due to <17 min or not classic\n",
+      "Skipping: 29 due to <17 min or not classic\n",
+      "Finished with: 30 of 499\n",
+      "Skipping: 31 due to <17 min or not classic\n",
+      "Finished with: 32 of 499\n",
+      "Finished with: 33 of 499\n",
+      "Finished with: 34 of 499\n",
+      "Finished with: 35 of 499\n",
+      "Skipping: 36 due to <17 min or not classic\n",
+      "Finished with: 37 of 499\n",
+      "Finished with: 38 of 499\n",
+      "Finished with: 39 of 499\n",
+      "Finished with: 40 of 499\n",
+      "Skipping: 41 due to <17 min or not classic\n",
+      "Skipping: 42 due to <17 min or not classic\n",
+      "Finished with: 43 of 499\n",
+      "Skipping: 44 due to <17 min or not classic\n",
+      "Finished with: 45 of 499\n",
+      "Finished with: 46 of 499\n",
+      "Finished with: 47 of 499\n",
+      "Skipping: 48 due to <17 min or not classic\n",
+      "Skipping: 49 due to <17 min or not classic\n",
+      "Skipping: 50 due to <17 min or not classic\n",
+      "Finished with: 51 of 499\n",
+      "Finished with: 52 of 499\n",
+      "Finished with: 53 of 499\n",
+      "Finished with: 54 of 499\n",
+      "Finished with: 55 of 499\n",
+      "Skipping: 56 due to <17 min or not classic\n",
+      "Finished with: 57 of 499\n",
+      "Finished with: 58 of 499\n"
      ]
     }
    ],
@@ -13095,7 +13361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df5a186b",
+   "id": "6e5548ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13105,7 +13371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eef47eb4",
+   "id": "0d8732b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13115,7 +13381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07785b36",
+   "id": "1630a71a",
    "metadata": {},
    "outputs": [],
    "source": [
